	PR target/59605 	* config/i386/i386.c (ix86_expand_set_or_movmem): Create 	jump_around_label only if it doesn't exist.

* gcc.dg/pr59605.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@206242 138bc75d-0d04-0410-961f-82ee72b054a4